# doodle-game-engine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build-n-run.sh  cmake.h.in  entrypoint.cpp  logging.conf
shaders/: shader.frag  shader.vert
src/: entrypoint.cpp  generate_include_guarders.py
src/common/: Color.hpp  CompileTimeVariables.h  Identifiable.hpp  Identificated.hpp  Layer.hpp  Layered.hpp  Logger.hpp  Math.hpp  Named.hpp  Runnable.hpp  Scheduler.cpp  Scheduler.h  Tag.hpp  Tagged.hpp  ThreadPool.hpp  Types.hpp
src/common/exceptions/: Exception.hpp
src/common/files/: File.cpp  File.h
src/common/math/: Math.cpp  Math.h
src/common/patterns/: Observer.hpp
src/common/serialize/: JsonSerializer.hpp
src/common/types/: Aliases.hpp
src/common/utils/: CollectionUtils.cpp  CollectionUtils.h  ConvertUtils.cpp  ConvertUtils.h  StringUtils.cpp  StringUtils.h
src/console/: NCurses.cpp  NCurses.h  Shell.cpp  Shell.h  Window.cpp  Window.h
src/editor/: EditorRunner.cpp  EditorRunner.h
src/loaders/: AbstractLoader.cpp  AbstractLoader.h  AssimpMeshLoader.cpp  AssimpMeshLoader.h  MeshLoader.cpp  MeshLoader.h
src/models/: AbstractModel.hpp  GameObject.cpp  GameObject.h
src/models/assets/: AbstractAsset.cpp  AbstractAsset.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
src/models/components/: AbstractComponent.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
src/models/components/mesh/: MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h
src/models/components/physic/: RigidBody.h
src/models/components/physic/collider/: AbstractCollider.cpp  AbstractCollider.h  BoxCollider.h  SphereCollider.h
src/models/components/rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Skybox.cpp  Skybox.h
src/renderers/: AbstractRenderer.cpp  AbstractRenderer.h  OpenGlRenderer.cpp  OpenGlRenderer.h
src/runner/: EngineRunner.cpp  EngineRunner.h
src/serialize/: JsonSerializer.hpp
src/standalone/: AbstractWindowManager.cpp  AbstractWindowManager.h  GlfwWindowManager.cpp  GlfwWindowManager.h  StandaloneEngineRunner.cpp  StandaloneEngineRunner.h
src/systems/: System.cpp  System.h  SystemsManager.cpp  SystemsManager.h
src/systems/physic/: PhysicSystem.cpp  PhysicSystem.h
src/systems/physic/engine/: PhysicEngine.cpp  PhysicEngine.h
src/systems/physic/engine/impl/bullet/: BulletObject.cpp  BulletObject.h  BulletPhysicEngine.cpp  BulletPhysicEngine.h  BulletUtils.cpp  BulletUtils.h
src/systems/physic/engine/impl/bullet/utils/: Converters.cpp  Converters.h
src/systems/physic/scene/: PhysicObject.cpp  PhysicObject.h  PhysicScene.cpp  PhysicScene.h
src/systems/rendering/: RenderSystem.cpp  RenderSystem.h
src/systems/rendering/engine/: Renderer.cpp  Renderer.h
src/systems/rendering/engine/impl/opengl/: GraphicObject.cpp  GraphicObject.h  OpenGlDeferredRenderer.cpp  OpenGlDeferredRenderer.h  OpenGlForwardRenderer.cpp  OpenGlForwardRenderer.h  OpenGlObject.cpp  OpenGlObject.h  OpenGlProgram.cpp  OpenGlProgram.h  OpenGlRenderer.cpp  OpenGlRenderer.h  OpenGlShader.cpp  OpenGlShader.h  OpenGlUtils.cpp  OpenGlUtils.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/systems/rendering/engine/impl/opengl/forward/: OpenGlForwardRenderer.cpp  OpenGlForwardRenderer.h
src/systems/rendering/engine/impl/opengl/forward/shaders/: MainShader.cpp  MainShader.h
src/systems/rendering/scene/: RenderingCamera.cpp  RenderingCamera.h  RenderingLight.cpp  RenderingLight.h  RenderingObject.cpp  RenderingObject.h  RenderingScene.cpp  RenderingScene.h
src/systems/rendering/scene/components/: Mesh.cpp  Mesh.h  MeshEntry.cpp  MeshEntry.h
src/systems/rendering/utils/: MeshLoader.cpp  MeshLoader.h
