CMAKE_MINIMUM_REQUIRED(VERSION 3.3.0)
PROJECT(DoodleGameEngine)

# Set some useful path-variables
SET(BUILD_DIRECTORY_NAME "build")
SET(INCLUDE_DIRECTORY_NAME "include")
SET(BINARY_DIRECTORY_NAME "bin")
SET(LIB_DIRECTORY_NAME "lib")
SET(ARCHIVE_DIRECTORY_NAME "archive")

SET(PROJECT_DIRECTORY \"${PROJECT_SOURCE_DIR}/\")
SET(PROJECT_LIB_DIRECTORY ${PROJECT_SOURCE_DIR}/${LIB_DIRECTORY_NAME})

SET(
        CMAKE_ARCHIVE_OUTPUT_DIRECTORY
        ${PROJECT_SOURCE_DIR}/${BUILD_DIRECTORY_NAME}/${ARCHIVE_DIRECTORY_NAME}
)
SET(
        CMAKE_LIBRARY_OUTPUT_DIRECTORY
        ${PROJECT_SOURCE_DIR}/${BUILD_DIRECTORY_NAME}/${LIB_DIRECTORY_NAME}
)
SET(
        CMAKE_RUNTIME_OUTPUT_DIRECTORY
        ${PROJECT_SOURCE_DIR}/${BUILD_DIRECTORY_NAME}/${BINARY_DIRECTORY_NAME}
)

SET_TARGET_PROPERTIES(
        PROPERTIES
        ARCHIVE_OUTPUT_DIRECTORY CMAKE_ARCHIVE_OUTPUT_DIRECTORY
        LIBRARY_OUTPUT_DIRECTORY CMAKE_LIBRARY_OUTPUT_DIRECTORY
        RUNTIME_OUTPUT_DIRECTORY CMAKE_RUNTIME_OUTPUT_DIRECTORY
)

INCLUDE(ExternalProject)

SET(EASYLOGGINGPP_NAME Easyloggingpp)
SET(
        EASYLOGGINGPP_DIRECTORY
        ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${EASYLOGGINGPP_NAME}
)
SET(
        EASYLOGGINGPP_BUILD_DIRECTORY
        ${EASYLOGGINGPP_DIRECTORY}/${BUILD_DIRECTORY_NAME}
)
SET(
        EASYLOGGINGPP_INCLUDE
        ${EASYLOGGINGPP_BUILD_DIRECTORY}/INSTALL/include
)
EXTERNALPROJECT_ADD(
        Easyloggingpp
        GIT_REPOSITORY https://github.com/easylogging/easyloggingpp
        GIT_TAG v9.83
        SOURCE_DIR ${EASYLOGGINGPP_DIRECTORY}
        BINARY_DIR ${EASYLOGGINGPP_BUILD_DIRECTORY}
        UPDATE_COMMAND ""
        PATCH_COMMAND ""
        CMAKE_GENERATOR ${gen}
        CMAKE_ARGS
        ${ep_common_args}
        -DCMAKE_BUILD_TYPE:STRING=Release
        -DCMAKE_INSTALL_PREFIX:PATH=${EASYLOGGINGPP_BUILD_DIRECTORY}/INSTALL
)
INCLUDE_DIRECTORIES("${EASYLOGGINGPP_INCLUDE}")

# TinyXML2
SET(TINYXML2_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/TinyXML2)
SET(TINYXML2_BUILD_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${BUILD_DIRECTORY}/TinyXML2)

EXTERNALPROJECT_ADD(
        TinyXML2
        GIT_REPOSITORY https://github.com/leethomason/tinyxml2
        GIT_TAG 4.0.1
        SOURCE_DIR ${TINYXML2_DIRECTORY}
        BINARY_DIR ${TINYXML2_BUILD_DIRECTORY}
        UPDATE_COMMAND ""
        PATCH_COMMAND ${CMAKE_COMMAND} -E copy ${TINYXML2_DIRECTORY}/CMakeLists.txt ${CMAKE_BINARY_DIR}/TinyXML2/CMakeLists.txt
        CMAKE_GENERATOR ${gen}
        CMAKE_ARGS
        ${ep_common_args}
        -DCMAKE_BUILD_TYPE:STRING=Release
        -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_BINARY_DIR}/INSTALL
)
SET(TINYXML2_INCLUDE ${CMAKE_BINARY_DIR}/INSTALL/include)

IF (LINUX)
    SET(TINYXML2_LIBRARIES ${CMAKE_BINARY_DIR}/INSTALL/lib/libtinyxml2.so)
ELSEIF (APPLE)
    SET(TINYXML2_LIBRARIES ${CMAKE_BINARY_DIR}/INSTALL/lib/libtinyxml2.dylib)
ENDIF ()

# RapidJSON
SET(RAPID_JSON_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/RapidJSON)
SET(RAPID_JSON_BUILD_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${BUILD_DIRECTORY}/RapidJSON)

EXTERNALPROJECT_ADD(
        RapidJSON
        GIT_REPOSITORY https://github.com/miloyip/rapidjson
        GIT_TAG v1.1.0
        SOURCE_DIR ${RAPID_JSON_DIRECTORY}
        BINARY_DIR ${RAPID_JSON_BUILD_DIRECTORY}
        UPDATE_COMMAND ""
        PATCH_COMMAND ${CMAKE_COMMAND} -E copy ${RAPID_JSON_DIRECTORY}/CMakeLists.txt ${CMAKE_BINARY_DIR}/RapidJSON/CMakeLists.txt
        CMAKE_GENERATOR ${gen}
        CMAKE_ARGS
        ${ep_common_args}
        -DCMAKE_BUILD_TYPE:STRING=Release
        -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_BINARY_DIR}/INSTALL
)
SET(RAPID_JSON_INCLUDE ${CMAKE_BINARY_DIR}/INSTALL/include)

# json_dto
SET(JSON_DTO_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/json_dto)

EXTERNALPROJECT_ADD(
        json_dto
        GIT_REPOSITORY https://github.com/wlad031/json_dto-0.1
        SOURCE_DIR ${JSON_DTO_DIRECTORY}
        PATCH_COMMAND ${CMAKE_COMMAND} -E copy_directory ${JSON_DTO_DIRECTORY}/dev/json_dto ${CMAKE_BINARY_DIR}/json_dto
        BUILD_IN_SOURCE 1
        CONFIGURE_COMMAND ""
        BUILD_COMMAND ""
        INSTALL_COMMAND ""
)
SET(JSON_DTO_INCLUDE ${JSON_DTO_BUILD_DIRECTORY}/include)

# PkgConfig
FIND_PACKAGE(PkgConfig REQUIRED)

# Boost
SET(CMAKE_THREAD_LIBS_INIT "-lpthread")
SET(CMAKE_HAVE_THREADS_LIBRARY 1)
SET(CMAKE_USE_WIN32_THREADS_INIT 0)
SET(CMAKE_USE_PTHREADS_INIT 1)

FIND_PACKAGE(Boost REQUIRED system filesystem thread timer chrono)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# Add source directories
AUX_SOURCE_DIRECTORY(src SOURCE_DIRECTORY)
AUX_SOURCE_DIRECTORY(src/common SOURCE_COMMON_DIRECTORY)
AUX_SOURCE_DIRECTORY(src/common/utils SOURCE_COMMON_UTILS_DIRECTORY)
AUX_SOURCE_DIRECTORY(src/runner SOURCE_RUNNER_DIRECTORY)
AUX_SOURCE_DIRECTORY(src/serialize SOURCE_SERIALIZE_DIRECTORY)
AUX_SOURCE_DIRECTORY(src/models/components SOURCE_MODELS_COMPONENTS_DIRECTORY)

SET(
        HEADERS_TO_COMPILE
        src/common/Runnable.hpp
        src/common/Types.hpp
        src/serialize/JsonSerializer.hpp
)

SET(
        SOURCE_FILES
        entrypoint.cpp
        ${HEADERS_TO_COMPILE}
        ${SOURCE_COMMON_DIRECTORY}
        ${SOURCE_COMMON_UTILS_DIRECTORY}
        ${SOURCE_RUNNER_DIRECTORY}
        ${SOURCE_SERIALIZE_DIRECTORY}
        ${SOURCE_MODELS_COMPONENTS_DIRECTORY}
        src/common/Math.hpp)

ADD_EXECUTABLE(
        DoodleGameEngine
        ${SOURCE_FILES}
)

TARGET_COMPILE_FEATURES(DoodleGameEngine PUBLIC cxx_std_1z)
TARGET_INCLUDE_DIRECTORIES(
        DoodleGameEngine INTERFACE
        src/
        "${PROJECT_BINARY_DIR}"
)

ADD_DEPENDENCIES(DoodleGameEngine Easyloggingpp)

TARGET_LINK_LIBRARIES(
        DoodleGameEngine
        ${Boost_LIBRARIES}
        ${TINYXML2_LIBRARIES}
)

ADD_DEPENDENCIES(
        DoodleGameEngine
        Easyloggingpp
        TinyXML2
        RapidJSON
        json_dto
)
